--- a/sub_html/NewReleases.html
+++ b/sub_html/NewReleases.html
@@ -531,7 +531,7 @@
 
         <!-- content_list area start -->
         <div class="content_list">
-            <ul class="list">
+            <ul>
                 <li>
                     <a href="#">
                         <img src="../img/NewReleases/img01.jpg" alt="img01">
@@ -545,6 +545,31 @@
                 <li>
                     <a href="#">
                         <img src="../img/NewReleases/img02.jpg" alt="img02">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img03.jpg" alt="img03">
+                    </a>
+                    <div class="list_text">
+                        <span>나이키 스포츠웨어 플로우</span><span>55,000원</span>
+                        <p>남성 우븐 쇼츠 AS</p>
+                        <p>5 컬러</p>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img03.jpg" alt="img03">
+                    </a>
+                    <div class="list_text">
+                        <span>나이키 스포츠웨어 플로우</span><span>55,000원</span>
+                        <p>남성 우븐 쇼츠 AS</p>
+                        <p>5 컬러</p>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img03.jpg" alt="img03">
                     </a>
                     <div class="list_text">
                         <span>나이키 스포츠웨어 플로우</span><span>55,000원</span>
