--- a/common.html
+++ b/common.html
@@ -93,6 +93,34 @@
         </ul>
     </div>
     <!-- mobile gnb menu area end -->
+
+    <!-- search btn expand start -->
+    <div class="search_expand container">
+        <div class="expand_top">
+            <div class="search_logo">
+                <a href="index.html">
+                    <img src="./img/common/nike_logo.png" alt="나이키_로고">
+                </a>
+            </div>
+            <div class="btn">
+                <div class="search_btn"></div>
+                <input type="text" placeholder="찾기">
+            </div>
+            <img class="close" src="./img/common/close_btn.png" alt="닫기_버튼">
+        </div>
+        <div class="expand_bottom">
+            <p>추천 검색어</p>
+            <ul>
+                <li><a href="#">와플 원</a></li>
+                <li><a href="#">워싱 컬렉션</a></li>
+                <li><a href="#">썸머 에센셜</a></li>
+                <li><a href="#">지속 가능 컬렉션</a></li>
+                <li><a href="#">에어맥스 97</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- search btn expand end -->
+
     <!-- header area start -->
     <header>
         <!-- htop -->
