--- a/sub_html/NewReleases.html
+++ b/sub_html/NewReleases.html
@@ -93,6 +93,34 @@
         </ul>
     </div>
     <!-- mobile gnb menu area end -->
+
+    <!-- search btn expand start -->
+    <div class="search_expand container">
+        <div class="expand_top">
+            <div class="search_logo">
+                <a href="index.html">
+                    <img src="../img/common/nike_logo.png" alt="나이키_로고">
+                </a>
+            </div>
+            <div class="btn">
+                <div class="search_btn"></div>
+                <input type="text" placeholder="찾기">
+            </div>
+            <img class="close" src="../img/common/close_btn.png" alt="닫기_버튼">
+        </div>
+        <div class="expand_bottom">
+            <p>추천 검색어</p>
+            <ul>
+                <li><a href="#">와플 원</a></li>
+                <li><a href="#">워싱 컬렉션</a></li>
+                <li><a href="#">썸머 에센셜</a></li>
+                <li><a href="#">지속 가능 컬렉션</a></li>
+                <li><a href="#">에어맥스 97</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- search btn expand end -->
+
     <!-- header area start -->
     <header>
         <!-- htop -->
@@ -418,7 +446,7 @@
             <div class="mobile_btn">
                 <ul>
                     <li><a href="#"><img src="../img/common/bag_icon.png" alt="가방_아이콘"></a></li>
-                    <li><a href="#"><img src="../img/common/search_icon.png" alt="돋보기_아이콘"></a></li>
+                    <li><a href="#" class="close"><img src="../img/common/search_icon.png" alt="돋보기_아이콘"></a></li>
                     <!-- mgbn_btn -->
                     <li class="mgnb_btn">
                         <a href="#">
@@ -537,24 +565,29 @@
                         <img src="../img/NewReleases/img01.jpg" alt="img01">
                     </a>
                     <div class="list_text">
-                        <span>나이키 스포츠웨어 플로우</span><span>55,000원</span>
-                        <p>남성 우븐 쇼츠 AS</p>
-                        <p>5 컬러</p>
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
                     </div>
                 </li>
                 <li>
                     <a href="#">
                         <img src="../img/NewReleases/img02.jpg" alt="img02">
                     </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="../img/NewReleases/img03.jpg" alt="img03">
-                    </a>
                     <div class="list_text">
-                        <span>나이키 스포츠웨어 플로우</span><span>55,000원</span>
-                        <p>남성 우븐 쇼츠 AS</p>
-                        <p>5 컬러</p>
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
                     </div>
                 </li>
                 <li>
@@ -562,29 +595,224 @@
                         <img src="../img/NewReleases/img03.jpg" alt="img03">
                     </a>
                     <div class="list_text">
-                        <span>나이키 스포츠웨어 플로우</span><span>55,000원</span>
-                        <p>남성 우븐 쇼츠 AS</p>
-                        <p>5 컬러</p>
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
                     </div>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../img/NewReleases/img03.jpg" alt="img03">
+                        <img src="../img/NewReleases/img04.jpg" alt="img04">
                     </a>
                     <div class="list_text">
-                        <span>나이키 스포츠웨어 플로우</span><span>55,000원</span>
-                        <p>남성 우븐 쇼츠 AS</p>
-                        <p>5 컬러</p>
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
                     </div>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../img/NewReleases/img03.jpg" alt="img03">
+                        <img src="../img/NewReleases/img05.jpg" alt="img05">
                     </a>
                     <div class="list_text">
-                        <span>나이키 스포츠웨어 플로우</span><span>55,000원</span>
-                        <p>남성 우븐 쇼츠 AS</p>
-                        <p>5 컬러</p>
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img06.jpg" alt="img06">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img07.jpg" alt="img07">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img08.jpg" alt="img08">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img09.jpg" alt="img09">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img10.jpg" alt="img10">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img11.jpg" alt="img11">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img12.jpg" alt="img12">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img13.jpg" alt="img13">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img14.jpg" alt="img14">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img15.jpg" alt="img15">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img16.jpg" alt="img16">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="../img/NewReleases/img17.jpg" alt="img17">
+                    </a>
+                    <div class="list_text">
+                        <div class="text_top">
+                            <span>나이키 스포츠웨어 플로우</span>
+                            <span>55,000원</span>
+                        </div>
+                        <div class="text_bottom">
+                            <p>남성 우븐 쇼츠 AS</p>
+                            <p>5 컬러</p>
+                        </div>
                     </div>
                 </li>
             </ul>
