--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <li>
                         <a href="#">
                             <img src="./img/common/question.png" alt="물음표_아이콘">
-                            <span>장바구니</span>
+                            <span>고객센터</span>
                         </a>
                     </li>
                 </ul>
@@ -93,6 +93,34 @@
         </ul>
     </div>
     <!-- mobile gnb menu area end -->
+
+    <!-- search btn expand start -->
+    <div class="search_expand container">
+        <div class="expand_top">
+            <div class="search_logo">
+                <a href="index.html">
+                    <img src="./img/common/nike_logo.png" alt="나이키_로고">
+                </a>
+            </div>
+            <div class="btn">
+                <div class="search_btn"></div>
+                <input type="text" placeholder="찾기">
+            </div>
+            <img class="close" src="./img/common/close_btn.png" alt="닫기_버튼">
+        </div>
+        <div class="expand_bottom">
+            <p>추천 검색어</p>
+            <ul>
+                <li><a href="#">와플 원</a></li>
+                <li><a href="#">워싱 컬렉션</a></li>
+                <li><a href="#">썸머 에센셜</a></li>
+                <li><a href="#">지속 가능 컬렉션</a></li>
+                <li><a href="#">에어맥스 97</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- search btn expand end -->
+
     <!-- header area start -->
     <header>
         <!-- htop -->
@@ -418,7 +446,8 @@
             <div class="mobile_btn">
                 <ul>
                     <li><a href="#"><img src="./img/common/bag_icon.png" alt="가방_아이콘"></a></li>
-                    <li><a href="#"><img src="./img/common/search_icon.png" alt="돋보기_아이콘"></a></li>
+                    <li><a href="#" class="mobile_btn_search"><img src="./img/common/search_icon.png" alt="돋보기_아이콘"></a>
+                    </li>
                     <!-- mgbn_btn -->
                     <li class="mgnb_btn">
                         <a href="#">
