--- a/sub_html/NewReleases.html
+++ b/sub_html/NewReleases.html
@@ -468,14 +468,24 @@
             <h2>신상품 전체보기 (4289)</h2>
             <ul>
                 <li>
-                    <a href="#">
-                        <span>필터</span><img src="../img/NewReleases/filter.png" alt="필터_아이콘">
+                    <a href="#" class="filter">
+                        <span>필터</span>
+                        <img src="../img/NewReleases/filter.png" alt="필터_아이콘">
                     </a>
+                    <a href="#" class="mobile_filter">필터</a>
                 </li>
                 <li>
-                    <a href="#">
-                        <span>신상품순</span><img src="../img/NewReleases/arrow_down.png" alt="아래화살표_아이콘">
+                    <a href="#" class="new_item">
+                        <span>신상품순</span>
+                        <img src="../img/NewReleases/arrow_down.png" alt="아래화살표_아이콘">
                     </a>
+                    <div class="new_item_menu">
+                        <ul>
+                            <li><a href="#">신상품순</a></li>
+                            <li><a href="#">높은 가격 순</a></li>
+                            <li><a href="#">낮은 가격 순</a></li>
+                        </ul>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -512,7 +522,7 @@
                     <li><img src="../img/NewReleases/plus.png" alt="플러스_아이콘"><span>더보기</span></li>
                 </ul>
                 <div class="check_menu_title">색상</div>
-                <ul>
+                <ul class="color_pick">
                     <li><input type="checkbox" id="베이지"><label for="베이지">베이지</label></li>
                     <li><input type="checkbox" id="검정색"><label for="검정색">검정색</label></li>
                     <li><input type="checkbox" id="파랑색"><label for="파랑색">파랑색</label></li>
@@ -562,7 +572,7 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="../img/NewReleases/img01.jpg" alt="img01">
+                        <img class="change_src1" src="../img/NewReleases/pants01.jpg" alt="pants_img01">
                     </a>
                     <div class="list_text">
                         <div class="text_top">
@@ -574,10 +584,16 @@
                             <p>5 컬러</p>
                         </div>
                     </div>
+                    <div class="thumb_img">
+                        <img src="../img/NewReleases/pants01.jpg" alt="pants_img01">
+                        <img src="../img/NewReleases/pants02.jpg" alt="pants_img02">
+                        <img src="../img/NewReleases/pants03.jpg" alt="pants_img03">
+                        <img src="../img/NewReleases/pants04.jpg" alt="pants_img04">
+                    </div>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../img/NewReleases/img02.jpg" alt="img02">
+                        <img class="change_src2" src="../img/NewReleases/cap01.jpg" alt="cap01_img">
                     </a>
                     <div class="list_text">
                         <div class="text_top">
@@ -589,10 +605,16 @@
                             <p>5 컬러</p>
                         </div>
                     </div>
+                    <div class="thumb_img">
+                        <img src="../img/NewReleases/cap01.jpg" alt="cap_img01">
+                        <img src="../img/NewReleases/cap02.jpg" alt="cap_img02">
+                        <img src="../img/NewReleases/cap03.jpg" alt="cap_img03">
+                        <img src="../img/NewReleases/cap04.jpg" alt="cap_img04">
+                    </div>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../img/NewReleases/img03.jpg" alt="img03">
+                        <img class="change_src3" src="../img/NewReleases/top01.jpg" alt="top_img01">
                     </a>
                     <div class="list_text">
                         <div class="text_top">
@@ -602,6 +624,12 @@
                         <div class="text_bottom">
                             <p>남성 우븐 쇼츠 AS</p>
                             <p>5 컬러</p>
+                        </div>
+                        <div class="thumb_img">
+                            <img src="../img/NewReleases/top01.jpg" alt="top_img01">
+                            <img src="../img/NewReleases/top02.jpg" alt="top_img02">
+                            <img src="../img/NewReleases/top03.jpg" alt="top_img03">
+                            <img src="../img/NewReleases/top04.jpg" alt="top_img04">
                         </div>
                     </div>
                 </li>
