sale.html, header scroll event udpate
sale.html, header scroll event udpate

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </head>
 
 <body>
+    <!-- top button -->
+    <div class="top_btn">
+        <img src="./img/common/arrow_up.png" alt="화살표_위">
+    </div>
     <!-- mobile gnb menu area start -->
     <div class="mgnb">
         <div class="mgbn_inner">
@@ -671,7 +675,7 @@
         </section>
         <section>
             <h3>Apparel Essentials</h3>
-            <div class="swiper-container shoesSlider">
+            <div class="swiper-container apparel">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="item_wrap">
