--- a/sub_html/NewReleases.html
+++ b/sub_html/NewReleases.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+    <!-- top button -->
+    <div class="top_btn">
+        <img src="../img/common/arrow_up.png" alt="화살표_위">
+    </div>
     <!-- mobile gnb menu area start -->
     <div class="mgnb">
         <div class="mgbn_inner">
@@ -481,7 +485,7 @@
                     </a>
                     <div class="new_item_menu">
                         <ul>
-                            <li><a href="#">신상품순</a></li>
+                            <li class="active"><a href="#">신상품순</a></li>
                             <li><a href="#">높은 가격 순</a></li>
                             <li><a href="#">낮은 가격 순</a></li>
                         </ul>
