--- a/sub_html/men.html
+++ b/sub_html/men.html
@@ -18,6 +18,10 @@
 </head>
 
 <body>
+    <!-- top button -->
+    <div class="top_btn">
+        <img src="../img/common/arrow_up.png" alt="화살표_위">
+    </div>
     <!-- mobile gnb menu area start -->
     <div class="mgnb">
         <div class="mgbn_inner">
@@ -145,7 +149,7 @@
         <!-- hbottom -->
         <div class="hbottom container inner">
             <h1 id="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <img src="../img/common/nike_logo.png" alt="나이키_로고">
                 </a>
             </h1>
@@ -460,25 +464,27 @@
                     </li>
                 </ul>
             </div>
-            <!-- mobile_btn area end -->
         </div>
     </header>
     <!-- header area end -->
 
     <!-- section area start -->
     <div class="container">
-        <div class="content_title">
-            <h2>NIKE MEN</h2>
-            <ul>
-                <li><a href="#">신발</a></li>
-                <li><a href="#">의류</a></li>
-                <li><a href="#">용품</a></li>
-                <li><a href="#">신상품</a></li>
-                <li><a href="#">베스트셀러</a></li>
-                <li><a href="#">SALE</a></li>
-            </ul>
-        </div>
+
+        <!-- section group -->
         <section>
+            <!-- mobile_btn area end -->
+            <div class="content_title">
+                <h2>NIKE MEN</h2>
+                <ul>
+                    <li><a href="#">신발</a></li>
+                    <li><a href="#">의류</a></li>
+                    <li><a href="#">용품</a></li>
+                    <li><a href="#">신상품</a></li>
+                    <li><a href="#">베스트셀러</a></li>
+                    <li><a href="#">SALE</a></li>
+                </ul>
+            </div>
             <div class="swiper-container main_banner">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -519,9 +525,9 @@
                 <a href="#"><img src="../img/men/section3_img.jpg" alt="배너_이미지3"></a>
             </div>
             <div class="text_area">
-                <h2>나이키 코르크 팩</h2>
-                <p>재생 코르크와 식물 자수 포인트로 새롭게 돌아온 클래식 아이콘을 만나보세요</p>
-                <a href="#">컬렉션 구매하기</a>
+                <h2>나이키 와플 원</h2>
+                <p>새로운 클래식으로 스타일의 틀을 깨다.<br>나이키 와플 원으로 새로운 룩을 연출해보세요.</p>
+                <a href="#">구매하기</a>
             </div>
         </section>
         <section>
@@ -529,9 +535,10 @@
                 <a href="#"><img src="../img/men/section4_img.jpg" alt="배너_이미지4"></a>
             </div>
             <div class="text_area">
-                <h2>나이키 와플 원</h2>
-                <p>새로운 클래식으로 스타일의 틀을 깨다<br>나이키 와플 원으로 새로운 룩을 연출해보세요.</p>
+                <h2>나이키 에어 줌 페가수스 38</h2>
+                <p>매일 달려도 변함없는 스피드를 구현하다.<br>최적화된 편안함과 향상된 반응성으로 새롭게 돌아온 페가수스 38과 함께 달려보세요.</p>
                 <a href="#">구매하기</a>
+                <a href="#">나이키 러닝 가이드</a>
             </div>
         </section>
         <section>
@@ -539,8 +546,8 @@
                 <a href="#"><img src="../img/men/section5_img.jpg" alt="배너_이미지5"></a>
             </div>
             <div class="text_area">
-                <h2>나이키 축구 임펄스 팩</h2>
-                <p>스피드를 형상화한 디자인으로 새롭게 출시된 임펄스 팩과 함께<br>더욱 민첩한 플레이를 완성해보세요.</p>
+                <h2>나이키 러닝 패스트 팩</h2>
+                <p>볼드한 컬러웨이로 새롭게 돌아온 나이키 러닝 패스트 팩으로<br>일상의 러닝부터 트레이닝 그리고 마라톤까지 최고의 기록을 달성해보세요.</p>
                 <a href="#">구매하기</a>
             </div>
         </section>
@@ -549,8 +556,8 @@
                 <a href="#"><img src="../img/men/section6_img.jpg" alt="배너_이미지5"></a>
             </div>
             <div class="text_area">
-                <h2>나이키 축구 임펄스 팩</h2>
-                <p>스피드를 형상화한 디자인으로 새롭게 출시된 임펄스 팩과 함께<br>더욱 민첩한 플레이를 완성해보세요.</p>
+                <h2>나이키 에어맥스 게놈</h2>
+                <p>시선을 압도하는 스타일과 편안함의 에어맥스 게놈을 만나보세요</p>
                 <a href="#">구매하기</a>
             </div>
         </section>
@@ -559,9 +566,10 @@
                 <a href="#"><video loop autoplay src="../img/men/section7_img.mp4" alt="배너_동영상1"></a>
             </div>
             <div class="text_area">
-                <h2>나이키 축구 임펄스 팩</h2>
-                <p>스피드를 형상화한 디자인으로 새롭게 출시된 임펄스 팩과 함께<br>더욱 민첩한 플레이를 완성해보세요.</p>
+                <h2>크레이터 임팩트</h2>
+                <p>더 가벼워진 탄소 발자국에 볼드한 디자인을 더한 나이키 크레이터 임팩트를 만나보세요.</p>
                 <a href="#">구매하기</a>
+                <a href="#">Move to Zero 바로가기</a>
             </div>
         </section>
         <section>
@@ -569,9 +577,11 @@
                 <a href="#"><video loop autoplay src="../img/men/section8_img.mp4" alt="배너_동영상1"></a>
             </div>
             <div class="text_area">
-                <h2>나이키 축구 임펄스 팩</h2>
-                <p>스피드를 형상화한 디자인으로 새롭게 출시된 임펄스 팩과 함께<br>더욱 민첩한 플레이를 완성해보세요.</p>
-                <a href="#">구매하기</a>
+                <h2>나이키닷컴 커스텀 서비스</h2>
+                <p>나이키 멤버만을 위한 특별한 커스텀 서비스를 만나보세요<br>축구 저지부터 티셔츠, 나이키 폴로까지.<br>지금 바로 나이키닷컴에서 세상에 하나뿐인 나만의 스타일을 완성해보세요.
+                </p>
+                <a href="#">커스텀 제품 보기</a>
+                <a href="#">자세히 보기</a>
             </div>
         </section>
         <!-- 다른 레이아웃 section -->
